# rsync-sjtug

./: .gitignore  Cargo.toml  Justfile  LICENSE.txt  NOTICE.md  README.md  migrations  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: build.yml  release.yml  test.yml
.sqlx/: query-13e3f2652f7f9148cbd34c022df24af73691d593ece88272d98e0ac4a291c6dd.json  query-1f6d16c097e61f7202953580058e63aa09e099de513d01799fa35cf2dc2f1d27.json  query-2595de5ace3d180eeb3ef653b5f3217dc0939f385aea4ecd140d9dc8892e999f.json  query-469b9cd3bce2257e4c61090f921f391b62ff07624f7bb38204bb8f94f13d258c.json  query-551ae8db1359ccab87701bcab2e98a39fb1db0bb6fed84f7292be0a0101b47b9.json  query-560f10a284cbe7c6223076f636aeebbbaac4f497d5fe919e1d2e2781cf86049c.json  query-69780548bde2b1c4d18d0b71f256ab574be2dc300ad617b81fa3eeb664d4a33f.json  query-6c1968bd371efdd55428d724dd77f465ee23236fecca801af177917bf43eaa52.json  query-6c8ce416a3683960369a6bf655f084718d0af16e48d6c9d355191fd0fe816116.json  query-71081138855e0331b6b2591528a9ec97e37f6e91f5ca80df1c6737824e33065d.json  query-7b4ae1552dac9aad72c66c6ec31a1bbe8991d8ab0fe88c42b7cb36b835e34c5b.json  query-8a6805e481effa92a3498768e2e2c8ea0f9e27b72f7407bc027f1295762df6fb.json  query-8b27bba11a795d9568e8bc25e2604a2cb933bf76595a044950001d1bcaa438c4.json  query-920fd563df078f0708505d3802e72c95e017a26a8b226b3c8619e7ae231c0f1b.json  query-95245a30dd43a4aba4ee21da10697030feeebe830934f02f27ce9f57f5398935.json  query-977a4bf23a0af5340afac449f95dd185cb9ef806dc30e2b77753b10891324a3f.json  query-ad564557eeaefa69e3e37bf8d8f8b0c870b3b442b3f851ff4541c874c8a68b23.json  query-bc4a0a674fbe3c979089f61f81843f3d04a07b3a6b54d98ee2a7d7e7c3295c50.json  query-bd5000df9ea3f2cadffdc5be8df6a93d39233dc993e96e9b90d9d9f394962b82.json  query-bf0ab7451053f58a7b8a26cbe743f8b22f8f5d39464e30b62040dd4dfd412583.json  query-c04f513928349f8c53e0f2130e972d39e8bc743a0b6e4d6c961c5a561a503fae.json  query-c855f5efd38b627786f59fbcc2498620c0b5e3344f05d525c54a26a34796f8e4.json  query-c93305cec8cd7f2aa5a62fcfe89398d63a8455772c1b1bfff952cfd298fb8ca6.json  query-eb65f59599587ad3e3395b7a6660d3223491a10f0a4d23be59f8e503dd7afb25.json  query-f24520b85bb212db4f94d755ed316a874cb8779ac9791f044ffb2bc9fb0e83cd.json  query-f5bc97058100eb590536260524907e95157207812b386a5936be15fdf0dba536.json  query-f86f7e7ca570227825b9aeec46c34a96ef536df11b9cec80a9aa13e1f7c28d3b.json  query-f8eeb6e974accaceffd7403ac026e54f2e0b2f3a9d24a8192a4cb9d5561678c3.json  query-fd33001019cc3c70d10e5a2ca6bc93208c91d0a04dfc43ce263639bc8f379dfa.json  query-fe5465ca825577b1eda87632aaf8b19f63821a95fad573b7a8caea67333790d1.json  query-fea127cc8ed7f3b99137fa279ca38bf9c489ffa93ea7bdf0852ca04e4f82af9e.json
migrations/: 20230618174227_init.sql
postgres/: .dockerignore  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml  postgresql.conf  setup.sh
postgres/migrations/: 20230716142135_init.down.sql  20230716142135_init.up.sql
postgres/oneshot-migration/: Cargo.toml
postgres/oneshot-migration/src/: main.rs
rsync-core/: Cargo.toml
rsync-core/src/: lib.rs  metadata.rs  pg.rs  pg_lock.rs  redis_.rs  s3.rs  set_ops.rs  tests.rs  utils.rs
rsync-core/src/logging/: either.rs  mod.rs  opts.rs  tcp.rs
rsync-fetcher/: CLEAN_PATH.md  Cargo.toml  README.md
rsync-fetcher/src/: consts.rs  filter.rs  index.rs  main.rs  opts.rs  pg.rs  plan.rs  redis_.rs  rsync.rs  s3.rs  set_ops.rs  symlink.rs  tests.rs  utils.rs
rsync-fetcher/src/rsync/: checksum.rs  downloader.rs  envelope.rs  file_list.rs  filter.rs  generator.rs  handshake.rs  mux_conn.rs  progress_display.rs  receiver.rs  stats.rs  uploader.rs  version.rs
rsync-fetcher/src/rsync/checksum/md4_simd/: mod.rs  x86_simd_transpose.rs
rsync-fix-encoding/: Cargo.toml
rsync-fix-encoding/src/: index.rs  main.rs  opts.rs
rsync-gateway/: Cargo.toml  README.md  config.example.toml
rsync-gateway/locales/: ui.yml
rsync-gateway/src/: app.rs  cache.rs  handler.rs  listener.rs  main.rs  metrics.rs  opts.rs  path_resolve.rs  pg.rs  proxy_serve.rs  realpath.rs  render.rs  state.rs  templates.rs  tests.rs  utils.rs
rsync-gateway/templates/: error.stpl  footer.stpl  footer_revision.stpl  listing.stpl  localize.js  navbar.stpl  revision_stats.stpl  styles.css
rsync-gc/: Cargo.toml  README.md
rsync-gc/src/: index.rs  main.rs  opts.rs  pg.rs  plan.rs  s3.rs  tests.rs
rsync-migration/: Cargo.toml  build.rs
rsync-migration/src/: main.rs  redis_to_pg.rs  schema_migration.rs  upgrade_encoding.rs
rsync-migration/src/upgrade_encoding/: index.rs  metadata.rs
sqls/: copy_directories.sql  copy_symlinks.sql  create_fl_table.sql  diff_changed.old.sql  diff_changed_or_remote_only.sql  diff_remote_only.old.sql  diff_unchanged_and_copy.sql  hashes_to_remove.sql  insert_filelist.sql  insert_objects.sql  keep_last_n.sql  latest_live_revision.sql  list_directory.sql  list_root.sql  realpath.sql  revision_stats.sql  test_dir_link_entries.sql  test_missing_or_different.sql  update_parent.sql
tests/migrations/: 20230716142135_init.sql
