[package]
name = "rsync-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
s3 = ["aws-config", "aws-sdk-s3", "url"]
s3-tests = ["s3", "tests", "aws-credential-types", "aws-sdk-s3/test-util", "s3s", "s3s-aws", "s3s-fs", "tempfile"]
tests = []

[dependencies]
aws-config = { version = "0.54", optional = true }
aws-credential-types = { version = "0.54", optional = true }
aws-sdk-s3 = { version = "0.24", optional = true }
bincode = "2.0.0-rc.2"
clean-path = "0.2"
either = "1.8"
eyre = "0.6"
futures = "0.3"
percent-encoding = { version = "2.2", optional = true }
rand = "0.8"
redis = { git = "https://github.com/PhotonQuantum/redis-rs", features = ["aio", "tokio-comp"] }
s3s = { version = "0.3", optional = true }
s3s-aws = { version = "0.3", optional = true }
s3s-fs = { version = "0.3", optional = true }
scan_fmt = "0.2"
tempfile = { version = "3.3", optional = true }
tokio = { version = "1.25", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.3", optional = true }
