[package]
name = "rsync-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
s3 = ["opendal"]
#s3-tests = ["s3", "tests", "aws-credential-types", "aws-sdk-s3/test-util", "s3s", "s3s-aws", "s3s-fs", "tempfile"]
tests = ["proptest", "proptest-derive"]
pg = ["sqlx", "blake2", "itertools"]
redis = ["dep:redis", "clean-path", "scan_fmt", "bincode"]
percent-encoding = ["dep:percent-encoding", "url-escape"]

[dependencies]
bincode = { version = "=2.0.0-rc.3", optional = true }
blake2 = { version = "0.10", optional = true }
clean-path = { version = "0.2", optional = true }
color-eyre = "0.6"
eyre = "0.6"
futures = "0.3"
itertools = { version = "0.11", optional = true }
metrics-tracing-context = { version = "0.14", optional = true }
opendal = { version = "0.40", default-features = false, features = ["rustls", "services-s3", "layers-tracing"], optional = true }
percent-encoding = { version = "2.2", optional = true }
proptest = { version = "1.3", optional = true }
proptest-derive = { version = "0.4", optional = true }
rand = "0.8"
redis = { git = "https://github.com/PhotonQuantum/redis-rs", features = ["aio", "tokio-comp"], optional = true }
scan_fmt = { version = "0.2", optional = true }
sqlx = { version = "0.7", features = ["bigdecimal", "runtime-tokio-rustls", "postgres", "chrono", "macros"], optional = true }
tokio = { version = "1.33", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url-escape = { version = "0.1", optional = true }
