[package]
name = "rsync-core"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
s3 = ["opendal"]
#s3-tests = ["s3", "tests", "aws-credential-types", "aws-sdk-s3/test-util", "s3s", "s3s-aws", "s3s-fs", "tempfile"]
tests = ["proptest", "proptest-derive"]
pg = ["sqlx", "blake2", "itertools"]
percent-encoding = ["dep:percent-encoding", "url-escape"]

[dependencies]
backtrace = "0.3"
blake2 = { version = "0.10", optional = true }
color-eyre = "0.6"
doku = { version = "0.21", optional = true }
eyre = "0.6"
futures = "0.3"
itertools = { version = "0.14", optional = true }
metrics-tracing-context = { version = "0.18", optional = true }
opendal = { version = "0.52", default-features = false, features = ["services-s3", "layers-tracing"], optional = true } # TODO reqwest: rustls
percent-encoding = { version = "2.3", optional = true }
proptest = { version = "1.6", optional = true }
proptest-derive = { version = "0.5", optional = true }
rand = "0.9"
serde = { version = "1.0", optional = true }
sqlx = { version = "0.8", features = ["bigdecimal", "runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "chrono", "macros"], optional = true }
stubborn-io = "0.3"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url-escape = { version = "0.1", optional = true }
