[package]
name = "rsync-fetcher"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aws-config = "0.54"
aws-sdk-s3 = "0.24"
backon = "0.4"
base64 = "0.21"
bincode = "=2.0.0-rc.3"
blake2 = "0.10"
bytesize = "1.1"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
clean-path = "0.2"
color-eyre = "0.6"
dashmap = "5.4"
digest = "0.10"
either = "1.8"
eyre = "0.6"
flume = "0.10"
futures = "0.3"
html-escape = "0.2"
indicatif = "0.17"
itertools = "0.10"
md4 = "0.10"
num = "0.4"
percent-encoding = "2.2"
pin-project = "1.0"
rand = "0.8"
redis = { git = "https://github.com/PhotonQuantum/redis-rs", features = ["aio", "tokio-comp"] }
rsync-core = { path = "../rsync-core", features = ["backon", "s3", "percent-encoding"] }
scan_fmt = "0.2"
tap = "1.0"
tempfile = "3.3"
tokio = { version = "1.25", features = ["full"] }
tracing = "0.1"
unix_mode = "0.1"
url = "2.3"
zeroize = { version = "1.6", features=["derive"] }

[dev-dependencies]
rsync-core = { path = "../rsync-core", features = ["tests"] }
