[package]
name = "rsync-fetcher"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1"
arrayref = "0.3"
async-trait = "0.1"
base64 = "0.22"
blake2 = "0.10"
bytesize = "2.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
clean-path = "0.2"
dashmap = "6.1"
digest = "0.10"
dotenvy = "0.15"
eyre = "0.6"
flume = "0.11"
futures = "0.3"
indicatif = "0.17"
itertools = "0.14"
md4 = "0.10"
mimalloc = "0.1"
multiversion = "0.8"
num = "0.4"
opendal = { version = "0.52", default-features = false }
percent-encoding = "2.3"
rsync-core = { path = "../rsync-core", features = ["s3", "percent-encoding", "pg"] }
scan_fmt = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "chrono", "macros"] }
tap = "1.0"
tempfile = "3.19"
tokio = { version = "1.44", features = ["full"] }
tokio-socks = "0.5"
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
unix_mode = "0.1"
url = "2.5"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
proptest = "1.6"
rsync-core = { path = "../rsync-core", features = ["tests"] }
test-strategy = "0.4"
