[package]
name = "rsync-fix-encoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsync-core = { path = "../rsync-core" }
bincode = "=2.0.0-rc.3"
bincode_old = { package = "bincode", git = "https://github.com/bincode-org/bincode", rev = "v2.0.0-rc.2" }
clap = { version = "4.1", features = ["derive"] }
url = "2.3"
redis = { git = "https://github.com/PhotonQuantum/redis-rs", features = ["aio", "tokio-comp"] }
eyre = "0.6"
color-eyre = "0.6"
futures = "0.3"
scan_fmt = "0.2"
tokio = { version = "1.25", features = ["full"] }
tracing = "0.1"
indicatif = "0.17"