[package]
name = "rsync-gateway"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
actix-web-lab = "0.19"
arc-swap = "1.6"
atomic = "0.5"
bigdecimal = "0.4"
bstr = "1.2"
chrono = { version = "0.4", features = ["rkyv"] }
dotenvy = "0.15"
either = "1.8"
eyre = "0.6"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
get-size = { version = "0.1", features = ["derive"] }
humansize = "2.1"
itertools = "0.11"
moka = { version = "0.11", features = ["future"] }
opendal = "0.38"
percent-encoding = "2.2"
rkyv = "0.7"
rsync-core = { path = "../rsync-core", features = ["percent-encoding", "pg", "s3"] }
sailfish = { version = "0.7", default-features = false, features = ["derive", "perf-inline"] }
scopeguard = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["bigdecimal", "runtime-tokio-rustls", "postgres", "chrono", "macros"] }
thiserror = "1.0"
tokio = { version = "1.25", features = ["rt"] }
tracing = "0.1"
tracing-actix-web = "0.7"
uuid = "1.4"
zstd = "0.12"

[dev-dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["arbitrary"] }
maplit = "1.0"
num-bigint = { version = "0.4", features = ["arbitrary"] }
once_cell = "1.18"
proptest = "1.2"
proptest-arbitrary-interop = "0.1"
proptest-derive = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rstest = "0.18"
rsync-core = { path = "../rsync-core", features = ["tests"] }
test-strategy = "0.3"
uuid = { version = "1.4", features = ["arbitrary"] }
