[package]
name = "rsync-gateway"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
actix-web-lab = "0.24"
arc-swap = "1.6"
bigdecimal = "0.4"
bstr = "1.2"
bytesize = { version = "2.0", features = ["serde"] }
chrono = { version = "0.4", features = ["rkyv"] }
clap = { version = "4.3", features = ["derive"] }
doku = "0.21"
dotenvy = "0.15"
eyre = "0.6"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
get-size = { version = "0.1", features = ["derive"] }
itertools = "0.14"
lazy-regex = "3.0"
line-span = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
metrics-tracing-context = "0.18"
metrics-util = "0.19"
mimalloc = "0.1"
moka = { version = "0.12", features = ["future"] }
opendal = { version = "0.52", default-features = false, features = ["layers-metrics"] }
percent-encoding = "2.2"
rkyv = "0.7"
rsync-core = { path = "../rsync-core", features = ["percent-encoding", "pg", "s3", "metrics-tracing-context", "serde", "doku"] }
rust-i18n = "3.1"
sailfish = { version = "0.9", default-features = false, features = ["derive", "perf-inline"] }
scopeguard = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["bigdecimal", "runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "chrono", "macros"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["rt"] }
tracing = "0.1"
tracing-actix-web = "0.7"
uuid = "1.4"
zstd = "0.13"

[dev-dependencies]
chrono = { version = "0.4", features = ["arbitrary"] }
http = "1.3"
maplit = "1.0"
num-bigint = { version = "0.4", features = ["arbitrary"] }
once_cell = "1.18"
proptest = "1.2"
proptest-arbitrary-interop = "0.1"
proptest-derive = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rstest = "0.25"
rsync-core = { path = "../rsync-core", features = ["tests"] }
test-strategy = "0.4"
toml = "0.8"
uuid = { version = "1.4", features = ["arbitrary"] }
