[package]
name = "rsync-gc"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "0.24"
backon = "0.4"
clap = { version = "4.1", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
flume = "0.10"
futures = "0.3"
indicatif = "0.17"
itertools = "0.10"
redis = { git = "https://github.com/PhotonQuantum/redis-rs", features = ["aio", "tokio-comp"] }
rsync-core = { path = "../rsync-core", features = ["backon", "s3"] }
scan_fmt = "0.2"
tokio = { version = "1.25", features = ["full"] }
tracing = "0.1"
url = "2.3"

[dev-dependencies]
rsync-core = { path = "../rsync-core", features = ["s3-tests"] }
