[package]
name = "rsync-migration"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive", "env"] }
dotenvy = "0.15"
eyre = "0.6"
futures = "0.3"
indicatif = "0.17"
itertools = "0.11"
redis = { git = "https://github.com/PhotonQuantum/redis-rs", features = ["aio", "tokio-comp"] }
rsync-core = { path = "../rsync-core", features = ["pg", "redis"] }
scan_fmt = "0.2"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "migrate", "postgres", "chrono", "macros"] }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
url = "2.3"
