[package]
name = "oneshot-migration"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "migrate", "postgres"] }
tokio = { version = "1.33", features = ["full"] }

[workspace]